Multi Select: fixed behind the scenes native select being visible on page

--- a/infl-styles/_multi_select.scss
+++ b/infl-styles/_multi_select.scss
@@ -98,7 +98,7 @@
 
   .pt-multi-select-native{
     position: absolute;
-    left: -1000px;
+    left: -10000px;
   }
 
   .pt-simple-popover {
